checkpoint - no use inline block as causes glitch on space chars

--- a/test/test.html
+++ b/test/test.html
@@ -7,6 +7,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+div { margin: 0; padding: 0 }
+
+p { clear: both; }
+
+h1, h2 { clear: both; }
+
 div.flap {
   font-size: 400%;
   color: #FFF;
@@ -15,14 +21,16 @@ div.flap {
   border-color:#222;
   background-color: #555;
   width: 1em;
+  height: 1em;
   text-align: center;
   border-radius: 10px 10px 0 0;
   -webkit-transform-origin: bottom;
-  display: inline-block;
+  float: left;
+  margin-right: 5px;
 }
 
 div.scaleY {
-  -webkit-transition: -webkit-transform 1s ease-in;
+  -webkit-transition: -webkit-transform 0.1s ease-in;
   -webkit-transform: scaleY(0);
 }
 </style>
@@ -86,7 +94,7 @@ function findPos(ch) {
 </head>
 <h1>Split-Flay Testing</h1>
 <h2>A Basic Box</h2>
-<div class="flap">A</div>
+<div id="basic" class="flap">A</div>
 
 <h2>2D Transform</h2>
 <div class="flap">A</div>
@@ -98,14 +106,41 @@ function findPos(ch) {
 <div class="flap" style="-webkit-transform: scaleY(0);">A</div>
 <div id="scaleY" class="flap">A</div>
 <script>
-function scaleY() {
-  $('#scaleY').addClass('scaleY');
+var dom = namespace.lookup('org.startpad.dom');
+var format = namespace.lookup('org.startpad.format');
+var doc;
+
+function onReady() {
+  doc = dom.bindIDs();
+  onFlipY();
+  $(doc.scaleY).bind('webkitTransitionEnd', onFlipY);
 }
 
-$(document).ready(scaleY);
+var msLast;
+var ySeq = '';
+
+function onFlipY() {
+  var msNow = new Date().getTime();
+  var ms = msNow - msLast;
+  msLast = msNow;
+  $(doc['flip-speed']).text(format.thousands(1000/ms, 1) + " fps");
+
+  if (ySeq == '') {
+    ySeq = letterSequence('x', '2');
+  }
+  var ch = ySeq[0];
+  dom.setText(doc.scaleY, ch);
+  ySeq = ySeq.substr(1);
+
+  $(doc.scaleY).removeClass('scaleY');
+  setTimeout(function () {$(doc.scaleY).addClass('scaleY');}, 1);
+}
+
+$(document).ready(onReady);
 </script>
 
 <p>scaleY(n) : for n = 1.0 to 0.0</p>
+<div id="flip-speed"></div>
 
 <h2>Split Box</h2>
 
