--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Pageforest Client Unit Tests</title>
+<title>Flipper Unit Tests</title>
 <script type="text/javascript"
         src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script type="text/javascript" src="/lib/beta/js/utils.js"></script>
