checkpoint - page formatting

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ $(document).ready(namespace.com.pageforest.flip.main.onReady);
 
     <div id="board"></div>
 
-    <textarea id='input' rows="20" cols="100">
+    <textarea id='input'>
 Welcome!
 To the split-flap
 Display Simulator
@@ -45,11 +45,10 @@ with only ---.
     <a id="back"></a>
     <a id="playPause"></a>
     <a id="forward"></a>
-    <span id="pageLocation">Page <span id='pageNum'>1</span> of <span id='pages'>1</span></span>
+    <div id="pageLocation">Page <span id='pageNum'>1</span> of <span id='pages'>1</span></div>
   </div>
 
   <div id="footer">
-    <hr/>
     <a target="_blank" id="displayLink">Link to this display</a> |
     <a target="_blank" href="https://github.com/mckoss/flipper">Source Code</a> |
     <a href="http://www.pageforest.com">Pageforest.com</a>
