static letters displayed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ $(document).ready(namespace.com.pageforest.flip.main.onReady);
       <div id="pageLocation">Page <span id='pageNum'>1</span> of <span id='pages'>1</span></div>
     </div>
 
-    <textarea id='input'>
+    <textarea id='messages'>
 Welcome!
 To the split-flap
 Display Simulator
