--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="apple-touch-icon" href="/images/touch.png"/>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <link rel="stylesheet" type="text/css" href="/lib/beta/css/client.css"/>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.js"></script>
 <script type="text/javascript" src="/lib/beta/js/json2.min.js"></script>
 <script type="text/javascript" src="/lib/beta/js/utils.js"></script>
 <script type="text/javascript" src="modernizr-1.6.min.js"></script>
