checkpoint - faster speed

--- a/index.html
+++ b/index.html
@@ -47,9 +47,16 @@ separated by a line
 with only ---.
     </textarea>
 
+    <select id="displayMode">
+      <option value="wipe">Wipe (fastest)</option>
+      <option value="2D">2D Split-Flap</option>
+      <option value="3D">3D Split-Flap (NYI)</option>
+      <option value="svg">SVG Graphics</option>
+    </select>
+
     <div id="footer">
       <a target="_blank" id="displayLink">Link to this display</a> |
-      <a target="_blank" href="https://github.com/mckoss/flipper">Source Code</a> |
+      <a target="_blank" href="https://github.com/mckoss/pfflipper">Source Code</a> |
       <a href="http://www.pageforest.com">Pageforest.com</a>
     </div> <!-- footer -->
   </div> <!-- page -->
