--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ $(document).ready(namespace.com.pageforest.flip.main.onReady);
       <a id="playPause"></a>
       <a id="forward"></a>
       <div id="pageLocation">Page <span id='pageNum'>1</span> of <span id='pages'>1</span></div>
+      <div id="time"></div>
     </div>
+
 
     <textarea id='messages'>
 Welcome!
